--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Ysy</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,19 +15,41 @@
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
     <header>
-        <a href="./index.html"><img src="./img/logo.png" id="logo" alt=""></a>
-        <nav class="navegador">
-            <ul>
-                <li><a href="./index.html">inicio</a></li>
-                <li><a href="./page/galeria.html">galeria</a></li>
-                <li><a href="./page/musica.html">lista de reproduccion</a></li>
-                <li><a href="./page/contacto.html">contacto</a></li>
-                <li><a href="./page/eventos.html">eventos</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-md fixed-top bg-body" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="./img/logo.png">
+                <img src="./img/logo.png" id="logo" alt="logo">
+              </a>
+              <button class="navbar-toggler" text-body type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <span class="navbar-toggler-icon "></span>
+              <div class="collapse  navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a  href="./index.html" class="btn btn-outline-warning" aria-current="page">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="btn btn-outline-warning"  aria-current="page" href="./page/galeria.html">Galeria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="btn btn-outline-warning"  aria-current="page" href="./page/musica.html">Musica</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="btn btn-outline-warning"  aria-current="page" href="./page/eventos.html">Eventos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="btn btn-outline-warning"  aria-current="page" href="./page/contacto.html">Contancto</a>
+                  </li>
+              </div>
+            </div>
+          </nav> 
+
     </header>
-    <main id="mainIndex">
+    <main id="mainIndex" d-flex flex-column justify-content-center align-items-center>
         <img src="./img/500x500.jpg" id="imgCentral" alt="Senor de la noche">
         <p>Alejo Nahuel Acosta Migliarini (Buenos Aires, Argentina; 12 de
             julio de 1998), conocido artísticamente como YSY A,​ es un rapero, productor, freestyler <br>
@@ -94,16 +117,21 @@
                 mas</a>
         </div>
     </div>
-    <footer>
-        <div class="pieContacto">
-            <a href="./contacto.html">contacto</a>
-            <a href="">quienes somos</a>
+    <footer class="container-fluid bg-dark">
+      <div class="row ">
+        <div class="contenedor-foot col-6">
+          <a class="foot-link" href="./page/contacto.html">contacto</a>
+          <a href="./page/galeria.html">galeria</a>
         </div>
-        <div class="pieRedes">
-            <a href="https://www.facebook.com/ysyashakur">facebook</a>
-            <a href="https://www.instagram.com/ysy__a/">instagram</a>
-            <a href="https://twitter.com/ysy__a ">twitter</a>
+        <div class="contenedor-foot col-6">
+          <a href="https://www.instagram.com/ysy__a/?hl=es">
+            <img class="foot-icono" src="./img/instagram.svg" alt="insta ysy">
+          </a>
+          <a href="">
+            <img class="foot-icono" src="./img/whatsapp.svg" alt="contacto wapp">
+          </a>
         </div>
+      </div>
     </footer>
 </body>
 
